--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
             @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
             @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
         </style>
         <title>Molly's Specialty Sweets</title>
     </head>
